logs/fsd.cmfbibliographyat.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fsd'...
Listing './lib/python3.5/site-packages/fsd/cmfbibliographyat'...
Listing './lib/python3.5/site-packages/fsd/cmfbibliographyat/Extensions'...
Listing './lib/python3.5/site-packages/fsd/cmfbibliographyat/browser'...
Listing './lib/python3.5/site-packages/fsd/cmfbibliographyat/browser/images'...
Listing './lib/python3.5/site-packages/fsd/cmfbibliographyat/browser/stylesheets'...
Listing './lib/python3.5/site-packages/fsd/cmfbibliographyat/profiles'...
Listing './lib/python3.5/site-packages/fsd/cmfbibliographyat/profiles/default'...
Listing './lib/python3.5/site-packages/fsd/cmfbibliographyat/profiles/default/types'...
Listing './lib/python3.5/site-packages/fsd/cmfbibliographyat/skins'...
Listing './lib/python3.5/site-packages/fsd/cmfbibliographyat/skins/fsd_cmfbibliographyat_custom_templates'...
Compiling './lib/python3.5/site-packages/fsd/cmfbibliographyat/skins/fsd_cmfbibliographyat_custom_templates/person_publications.py'...
***   File "./lib/python3.5/site-packages/fsd/cmfbibliographyat/skins/fsd_cmfbibliographyat_custom_templates/person_publications.py", line 60
    return [r.getObject() for r in results]
                                          ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/fsd.cmfbibliographyat-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
